<resources>
    <string name="app_name">ProkatProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="MapKey">AIzaSyDNliUsGNtOJS9VYXt4khmU-Y2hHlpd5ro</string>
    <string name="action_settings">Settings</string>
    <string name="main">Գլխավոր</string>
    <string name="topof">Թոփ առաջարկներ</string>
    <string name="newof">Նոր առաջարկներ</string>
    <string name="about">Մեր մասին</string>
    <string name="conditions">Պայմաններ</string>
    <string name="feedback">Հետադարձ կապ</string>
    <string name="spinner_default">---</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">Հեռ.՝ +374 94 77 25 28, +374 99 77 25 28</string>
    <string name="phone_land_1">Հեռ.՝  </string>
    <string name="phone_land_2">+374 94 77 25 28</string>
    <string name="phone_land_3">+374 99 77 25 28</string>
    <string name="email">Էլ. փոստ՝    </string>
    <string name="info_prokat_am">info@prokat.am</string>
    <string name="address">Հասցե՝ Սարյան 5</string>
    <string name="address_title">Հասցե</string>
    <string name="namehint">Անուն *</string>
    <string name="emaihint">Էլ. փոստ *</string>
    <string name="phonehint">Հեռախոս *</string>
    <string name="submit">Ուղարկել</string>
    <string name="messagehint">Հաղորդագրություն *</string>
    <string name="noteshint">Այլ նշումներ *</string>
    <string name="add_title">Ավելացնել առաջարկ</string>
    <string name="add_button">Ավելացնել</string>
    <string name="goods">Ապրանքներ</string>
    <string name="transport">Տրանսպորտ</string>
    <string name="realty">Անշարժ գույք</string>
    <string name="about_all">\t«Prokat.am» կայքը սկսել է իր գործունեությունը 2012 թ-ի մայիսից մի խումբ երիտասարդ ընկերների նախաձեռնությամբ: Այն առաջին պաշտոնապես բացված կայքն է վարձույթով ապրանքներ տրամադրող ընկերությունների ցանկում, որն իր մեջ համալրեց գրեթե ամեն ոլորտ և լինելով առաջին startup-երից մեկը՝ հնարավորություն տվեց մեր հաճախորդներին պատվիրել ցանկացած ապրանք և ծառայություն online տարբերակով: Այս համակարգը նպաստեց նոր և հավատարիմ հաճախորդներ ունենալուն, ինչպես նաև ընկերության զարգացմանը:
Այսօր ընկերությունը շարունակում է պահել իր առաջատարի վարկանիշը՝ առաջարկելով ապրանքների լայն շրջանակ, որն իր մեջ ներառում է հետևյալ բաժինները՝ համակարգչային, ձայնային և լուսային տեխնիկա, սպասք, գործիքներ, հագուստ, տրանսպորտային միջոցներ, տեսախցիկներ, վրաններ և այլ բազմազան տեսականի: Այս ամենին ներառյալ դուք կարող եք օգտվել ընկերության կողմից առաջարկվող մի շարք ծառայություններից: Դրանք են՝ հարսանիքների, ֆուրշետների և այլ միջոցառումների կազմակերպում, փուչիկների ձևավորում, համակարգչային սպասարկում, շինարարական աշխատանքներ, և այլն:
Այս ամենից բացի, Prokat.am-ը հիանալի հարթակ է բոլոր նրանց համար, ովքեր ցանկանում են վարձույթով տրամադրել իրենց ապրանքները կամ մատուցել որևէ ծառայություն՝ դառնալով մեր գործընկերները:
\n\tԱպրանքների բարձր որակը, ծառայությունների մատուցման բարձր մակարդակը, ինչպես նաև հաճախորդների պահանջներն ու ցանկությունները մշտապես մեր ուշադրության կենտրոնում են: Հաճախորդների հարմարավետության հետ կապված յուրաքանչյուր նոր գաղափար երկար քննարկումներից և վերլուծություններից հետո բերում է մի նոր գործառույթի, որն ավելի է հեշտացնում հաճախորդի համար՝ ստանալ այն, ինչ ցանկանում է՝ խնայելով թե՛ իր ժամանակը, և թե՛ գումարը:
\n\tԸնկերությունը քայլում է ժամանակին ընդառաջ, մշտապես ավելացնում, կատարելագործում ու թարմացնում բոլոր ապրանքներն ու ծառայությունները՝ մշակելով ավելի արագ և արդյունավետ սպասարկում, ինչն էլ թույլ է տալիս մեզ՝ լինել պահանջված ու հետաքրքիր և գոհացնել մեր հաճախորդներին:
\n\n\tՀ.Գ.
\n\t«Քանի-որ կենցաղում գոյություն ունեն այնպիսի ապրանքներ, որոնք հաճախ չեն օգտագործվում, իսկ անհրաժեշտության դեպքում էլ թանկ են գնելու համար, մենք կարծեցինք, որ շատ-շատերն ունեն «Prokat.am»-ի կարիքը: Իսկապես, ինչու՞ գնել, եթե կարելի է վարձել»: (Ընկերության հիմնադիրներ):</string>
    <string name="service">Ծառայություններ</string>
    <string name="conditions_all">- Վարձակալի և վարձատուի հարաբերությունները կարգավորվում են պայմանագրով\t\n - Վարձակալը պատվերը տալիս է նախապես` 2 օր առաջ\t\n - Գործարքը իրականացվում է 50% կանխավճարով\t\n - Ժամկետը երկարացնելու համար անհրաժեշտ է նախապես վճարել ավելացված օրերի վարձավճարն ամբողջությամբ\t\n - Անհրաժեշտ փաստաթղթեր` անձը հաստատող փաստաթուղթ և վարորդական իրավունք (մեքենայի վարձակալության դեպքում)\t\n - Պայմանագրին ավելի մանրամասն ծանոթանալու համար սեղմեք\n</string>
    <string name="section">Բաժին</string>
    <string name="subsection">Ենթաբաժին</string>
    <string name="mCity">Քաղաք</string>
    <string name="description">Բնութագիր</string>
    <string name="mPrice">Գին</string>
    <string name="time_period">Ժամանակ</string>
    <string name="hour">Ժամ</string>
    <string name="day">Օր</string>
    <string name="month">Ամիս</string>
    <string name="photo_button">...</string>
    <string name="transport_mark">Մակնիշ</string>
    <string name="transport_model">Մոդել</string>
    <string name="photos_title">Նկարներ (800x600px -.jpg)</string>
    <string name="choose_photo">Ընտրել նկարը</string>
    <string name="photo_not_choose">Նկարը ընտրված չէ</string>
    <string name="contacts">Կոնտակտային տվյալներ</string>
    <string name="name">Անվանում</string>
    <string name="engine_type">Վառելիքի տեսակը</string>
    <string name="engine_volume">Շարժիչի ծավալը</string>
    <string name="mBox">Փոխանցման տուփ</string>
    <string name="mYear">Տարեթիվ</string>
    <string name="rooms">Սենյակներ</string>
    <string name="mFloor">Հարկ</string>
    <string name="language">Լեզու</string>
    <string name="please">Խնդրում ենք ընտրել բաժինը</string>
    <string name="transport_year">Տարեթիվ</string>
    <string name="transport_engine">Փոխանցման տուփ</string>
    <string name="transport_volume">Շարժիչի ծավալ</string>
    <string name="relatives">Նմանատիպ առաջարկներ</string>
    <string name="order">Պատվիրել</string>
    <string name="social">Սոց.ցանցեր</string>
    <string name="ok">Հաստատել</string>
    <string name="cancel">Չեղարկել</string>
    <string name="upload_type">Ընտրեք ներբեռնման ձևը</string>
    <string name="checkout">Պատվերի ձևակերպում</string>
    <string name="changelang">Փոխել լեզուն</string>
    <string name="arm">Հայերեն</string>
    <string name="rus">Русский</string>
    <string name="eng">English</string>
    <string name="retry">Կրկնել</string>
    <string name="camera_permission_deny">Չհաջողվեց միանալ տեսախցիկից, խնդրում ենք ստացեք թույլտվություն</string>
    <string name="gallery_permission_deny">Չհաջողվեց միանալ հեռախոսի ներքին հիշողությանը, խնդրում ենք ստանալ թույլտվություն</string>
    <string name="pleaseconnect">Խնդրում ենք միանալ ինտերնետին</string>
    <string name="image_uploaded">Նկարը ներբեռնված է</string>
    <string name="map_permission">Տեղադրության թույլատվությունը բացակայում է։ Խնդրում ենք թույլ տալ հավելվածին տեղեկություններ ստանալ Ձեր տեղադրության մասին և վերագործարկել հավելվածը։</string>
    <string name="maps_permission_deny">«Google Maps»-ը կարող է աշխատել ոչ կոռեկտ</string>
    <string name="canceled">Մերժված է</string>
    <string-array name="bydefualt">
        <item>---</item>
    </string-array>
    <string-array name="goods_titles">
        <item>---</item>
        <item>Համակարգչային տեխնիկա</item>
        <item>Ամեն ինչ միջոցառումների համար</item>
        <item>Ձայնային լուսային տեխնիկա</item>
        <item>Տեսախցիկներ</item>
        <item>Գործիքներ</item>
        <item>Տուրիզմ</item>
        <item>Հագուստ</item>
        <item>Կապի միջոցներ</item>
        <item>Ժամանց</item>
        <item>Սպասք</item>
        <item>Այլ ապրանքներ</item>
    </string-array>
    <string-array name="comp_equipment">
        <item>---</item>
        <item>Նոութբուքներ</item>
        <item>Էկրաներ</item>
        <item>LCD պրոյեկտորներ</item>
        <item>Լազերային տպիչներ/Սկաներ</item>
        <item>Բազմաֆունկցիոնալ սարքավորումներ</item>

    </string-array>
    <string-array name="ever_events">
        <item>---</item>
        <item>Սեղաններ</item>
        <item>Աթոռններ</item>
        <item>Վրաններ</item>
        <item>Այլ</item>
    </string-array>
    <string-array name="sound_equipments">
        <item>---</item>
        <item>Ձայնային սարքեր</item>
        <item>Լուսային էֆեկտներ</item>
        <item>Երաժշտական սարքեր</item>
    </string-array>
    <string-array name="cameras">
        <item>---</item>
        <item>Ֆոտոխցիկ</item>
        <item>Վիդեոխցիկ</item>
        <item>Եռոտանիներ(շտատիվ)</item>
        <item>Նկարահանման կռան</item>
        <item>Օբյեկտիվ</item>
    </string-array>
    <string-array name="tools">
        <item>---</item>
        <item>Խոտ հնձող սարք</item>
        <item>Շարժական աստիճան</item>
        <item>Պտուտակահան</item>
        <item>Սղոցներ</item>
        <item>Շաղափ (дрель)</item>
        <item>Գեոդեզիական գօրծիքներ</item>
        <item>Այլ</item>

    </string-array>
    <string-array name="tourism">
        <item>---</item>
        <item>Վրաններ</item>
        <item>Քնապարկ</item>
        <item>Հեծանիվ</item>
        <item>Փչովի մակույկներ</item>
        <item>Գամակներ</item>
        <item>Ձկնորսական պարագաներ</item>


    </string-array>
    <string-array name="clothing">
        <item>---</item>
        <item>Հարսանեկան</item>
        <item>Մուլտհերոսներ</item>
        <item>Մանկական</item>


    </string-array>
    <string-array name="communications">
        <item>---</item>
        <item>Ռացիաներ</item>


    </string-array>
    <string-array name="entertaiment">
        <item>---</item>
        <item>Փչովի լողավազաներ</item>
        <item>Փչովի խաղահրապարակ</item>
        <item>Այլ</item>


    </string-array>
    <string-array name="tableware">
        <item>---</item>
        <item>Ֆուրշետի պարագաներ</item>
        <item>Բաժականեր</item>
        <item>Ափսեներ</item>
        <item>Պատառաքաղ,Դանակ,Գդալ</item>
        <item>Ուտեստների տակդիրներ</item>
        <item>Այլ</item>


    </string-array>
    <string-array name="other_goods">
        <item>---</item>
        <item>Դրոշներ</item>
        <item>Չհրկիզվող պահարաններ</item>
        <item>Գեներատորներ</item>


    </string-array>
    <string-array name="cities">
        <item>---</item>
        <item>Երեւան</item>
        <item>Աշտարակ</item>
        <item>Արտաշատ</item>
        <item>Արարատ</item>
        <item>Մասիս</item>
        <item>Վաղարշապատ</item>
        <item>Արմավիր</item>
        <item>Գավառ</item>
        <item>Մարտունի</item>
        <item>Սեւվան</item>
        <item>Աբովյան</item>
        <item>Հրազդան</item>
        <item>Եղվարդ</item>
        <item>Վանաձոր</item>
        <item>Ալավերդի</item>
        <item>Ստեփանավան</item>
        <item>Գորիս</item>
        <item>Կապան</item>
        <item>Քաջարան</item>
        <item>Մեղրի</item>
        <item>Իջեւվան</item>
        <item>Սիսիան</item>
        <item>Դիլիջան</item>
        <item>Նոյեմբերյան</item>
        <item>Արթիկ</item>
        <item>Մարալիկ</item>
        <item>Ջերմուկ</item>
        <item>Սաղմոսավան</item>


    </string-array>
    <string-array name="transport_titles">
        <item>---</item>
        <item>Էկոնոմ</item>
        <item>Բիզնես</item>
        <item>Ամենագնաց</item>
        <item>Ներկայացուցչական</item>
        <item>Լիմուզիններ</item>
        <item>Կաբրիոլետներ</item>
        <item>Մինիվեն/միկրոավտոբուս</item>
        <item>Ռետրո</item>
        <item>Կառքեր</item>
        <item>Այլ</item>

    </string-array>
    <string-array name="fuel_types">
        <item>---</item>
        <item>Բենզին</item>
        <item>Դիզել</item>
        <item>Գազ</item>
        <item>Հիբրիդ</item>
        <item>Այլ</item>


    </string-array>
    <string-array name="box_types">
        <item>---</item>
        <item>Ավտոմատ</item>
        <item>Մեխանիկական</item>
        <item>Կիսավտոմատ</item>
        <item>Այլ</item>


    </string-array>
</resources>