<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main"
            android:icon="@drawable/main"
            android:title="@string/main" />
        <item
            android:id="@+id/topof"
            android:icon="@drawable/topof"
            android:title="@string/topof" />
        <item
            android:id="@+id/newof"
            android:icon="@drawable/newof"
            android:title="@string/newof" />

    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/about"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/conditions"
            android:icon="@drawable/conditions"
            android:title="@string/conditions" />
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/feedback"
            android:title="@string/feedback" />

    </group>

</menu>
