<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/maincolorblue"
        android:id="@+id/upload_dialog_title">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_type"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"

            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/image_upload_dialog_layout"
        android:layout_below="@id/upload_dialog_title">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/camera_image"
            android:src="@drawable/camera_icon"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/gallery_image"
            android:src="@drawable/gallery"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/image_upload_dialog_buttons"
        android:layout_below="@id/image_upload_dialog_layout">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/upload_dialog_cancel_button"
            android:text="@string/cancel"
            android:background="@color/maincolorblue"
            android:layout_weight="1"
            />
        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/maincolorwhite"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/upload_dialog_ok_button"
            android:text="@string/ok"
            android:background="@color/maincolorblue"
            android:layout_weight="1"
            />
    </LinearLayout>

</RelativeLayout>